# mimicry_plugin

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  EULA.txt  README.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  benchmark_phase_correct.cpp
src/delay/: MultiHeadDelayLine.h  StereoMultiHeadDelayLine.h
src/gui/: DelayControllerLookAndFeel.h  DelayHeadController.cpp  DelayHeadController.h  DigitalLookAndFeel.h  LabeledSlider.cpp  LabeledSlider.h  MimicryLookAndFeel.cpp  MimicryLookAndFeel.h  PresetSelector.cpp  PresetSelector.h  TempoControls.cpp  TempoControls.h  TempoDisplay.cpp  TempoDisplay.h  WhiteLabelLookAndFeel.h  Widgets.cpp  Widgets.h  colors.h  font.h
src/gui/title/: TitleLookAndFeel.h
src/pitch/: MultiPhaseVocoder.cpp  MultiPhaseVocoder.h  PhaseVocoder.cpp  PhaseVocoder.h  PitchFunctions.cpp  PitchFunctions.h  pitch_functions.cpp  pitch_functions.h
src/util/: mimicry_util.h
tests/: test_misc.cpp  test_pitch.cpp
